--- a/XOpenGL_1.0/XOpenGL_1.0.vcxproj.filters
+++ b/XOpenGL_1.0/XOpenGL_1.0.vcxproj.filters
@@ -27,12 +27,18 @@
     <ClCompile Include="glew.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="XResource.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="XGLContent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="XGLWindow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="XResource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
