--- a/XOpenGL_1.0/XOpenGL_1.0.vcxproj.filters
+++ b/XOpenGL_1.0/XOpenGL_1.0.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="XVideo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="XGLPBuffer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="XGLContent.h">
@@ -57,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="XVideo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="XGLPBuffer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
