--- a/XOpenGL_1.0/XOpenGL_1.0.vcxproj.filters
+++ b/XOpenGL_1.0/XOpenGL_1.0.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="XGLFrameBufferObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="XCamera.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="XGLContent.h">
@@ -69,6 +72,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="XGLFrameBufferObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="XCamera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="XMath.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CommonType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
