--- a/XOpenGL_1.0/XOpenGL_1.0.vcxproj
+++ b/XOpenGL_1.0/XOpenGL_1.0.vcxproj
@@ -156,6 +156,7 @@
   <ItemGroup>
     <ClCompile Include="glew.c" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="XCamera.cpp" />
     <ClCompile Include="XGLContent.cpp" />
     <ClCompile Include="XGLFrameBufferObject.cpp" />
     <ClCompile Include="XGLPBuffer.cpp" />
@@ -166,11 +167,14 @@
     <ClCompile Include="XVideo.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CommonType.h" />
+    <ClInclude Include="XCamera.h" />
     <ClInclude Include="XGLContent.h" />
     <ClInclude Include="XGLFrameBufferObject.h" />
     <ClInclude Include="XGLPBuffer.h" />
     <ClInclude Include="XGLWindow.h" />
     <ClInclude Include="XLog.h" />
+    <ClInclude Include="XMath.h" />
     <ClInclude Include="XRenderWindow.h" />
     <ClInclude Include="XResource.h" />
     <ClInclude Include="XVideo.h" />
