--- a/XOpenGL_1.0/XOpenGL_1.0.vcxproj.filters
+++ b/XOpenGL_1.0/XOpenGL_1.0.vcxproj.filters
@@ -89,5 +89,8 @@
     <ClInclude Include="XCamera3rd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="XFrustum.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
