--- a/Lua_Module/Lua_Module.vcxproj
+++ b/Lua_Module/Lua_Module.vcxproj
@@ -19,9 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{9B0434A0-EFA7-4682-A306-02510F05DC2A}</ProjectGuid>
+    <ProjectGuid>{1598BBFB-CF6C-4724-8125-888FBA61AFD9}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>LuaCTest</RootNamespace>
+    <RootNamespace>Lua_Module</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
